--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ aioredis==2.0.1
 alembic==1.10.3
 pytest==7.3.1
 pytest-cov==4.0.0
+typing-extensions==4.5.0
 jmespath==1.0.1
 PyYAML==6.0
 lxml==4.9.2
