Use AlmaLinux cert in AlmaLinux-8

--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -71,8 +71,8 @@
         "%__pesign_client_cert": "%pe_signing_cert"
         "%__pesign_client_token": "%pe_signing_token"
         "%__pesign_token": "-t %pe_signing_token"
-        "%pe_signing_cert": "'Cloud Linux Software, Inc'"
-        "%pe_signing_token": "'profil standardowy'"
+        "%pe_signing_cert": "'f4217b7b99a69128'"
+        "%pe_signing_token": "'AlmaLinux OS Foundation'"
         "%_pesign": "/usr/local/bin/pesign"
         "%_pesign_client": "/usr/local/bin/pesign-client"
         "%with_modsign": "1"
