--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -276,7 +276,9 @@ services:
       - redis
 
   pulp:
-    image: pulp/pulp
+    # image: pulp/pulp
+    # after downgrading pulp you probably should to remove pulp volumes
+    image: pulp/pulp:upgrade
     ports:
       - 8081:80
     volumes:
