--- a/alws/scripts/albs-gitea-listener/requirements.txt
+++ b/alws/scripts/albs-gitea-listener/requirements.txt
@@ -2,6 +2,6 @@ paho-mqtt==1.5.1
 pydantic==1.8.2
 ruamel.yaml==0.17.13
 sentry-sdk==1.12.1
-requests
-aioredis
-aiohttp
+requests==2.31.0
+aiohttp==3.8.4
+aioredis==2.0.1
