AlmaLinux/build-system#57: Mount the sources to a container (albs-web-server, albs-sign-node) instead store them into a container
- Copying the code into the images is removed
- Pull the already built image from quay.io

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,14 +63,11 @@ services:
       - rabbitmq
 
   web_server:
-    image: al-web-server:latest
+    image: quay.io/almalinuxorg/albs:latest
     env_file:
       - vars.env
     ports:
       - "8088:8000"
-    build:
-      dockerfile: Dockerfile
-      context: .
     volumes:
       - "./alws:/code/alws"
       - "./tests:/code/tests"
