--- a/Dockerfile.git-cacher
+++ b/Dockerfile.git-cacher
@@ -5,10 +5,8 @@ RUN mkdir -p /code && \
     yum install python3-virtualenv python38 -y && \
     yum clean all
 RUN curl https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh -o wait_for_it.sh && chmod +x wait_for_it.sh
-COPY ./alws/scripts/git_cacher/requirements.txt /tmp/requirements.txt
+COPY ./alws/scripts/git_cacher/requirements.txt /code/requirements.txt
 RUN cd /code && virtualenv -p python3.8 env && source env/bin/activate \
-    && pip3 install --upgrade pip && pip3 install -r /tmp/requirements.txt --no-cache-dir
-COPY ./alws /code/alws
-COPY ./alws/scripts/git_cacher/git_cacher.py /code/
+    && pip3 install --upgrade pip && pip3 install -r /code/requirements.txt --no-cache-dir
 WORKDIR /code
-CMD ["/bin/bash", "-c", "source env/bin/activate && python git_cacher.py"]
+CMD ["/bin/bash", "-c", "source env/bin/activate && pip3 install --upgrade pip && pip3 install -r requirements.txt --no-cache-dir && python git_cacher.py"]
