--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -227,15 +227,14 @@ services:
     privileged: true
     env_file:
       - vars.env
-    build:
-      # TODO: Hack for developement, put https://github.com/AlmaLinux/albs-node here instead
-      context: ../albs-node
-      dockerfile: Dockerfile
     volumes:
       # TODO: Hack for developement, put placeholder here instead
       - "../albs-node/node-config:/home/alt/.config"
+      - "../albs-node/requirements.txt:/build-node/requirements.txt"
+      - "../albs-node/build_node:/build-node/build_node"
+      - "../albs-node/almalinux_build_node.py:/build-node/almalinux_build_node.py"
     restart: on-failure
-    command: "bash -c '/wait_for_it.sh web_server:8000 && source env/bin/activate && ./almalinux_build_node.py -v -t 2'"
+    command: "bash -c '/wait_for_it.sh web_server:8000 && source env/bin/activate && pip3 install --upgrade pip && pip3 install -r requirements.txt --no-cache-dir && python3 almalinux_build_node.py -v -t 2'"
     depends_on:
       - web_server
 
