--- a/Dockerfile.task-queue
+++ b/Dockerfile.task-queue
@@ -11,4 +11,4 @@ COPY requirements.txt /code/requirements.txt
 RUN cd /code && virtualenv -p python3.9 --system-site-packages env && source env/bin/activate \
     && pip3 install --upgrade pip && pip3 install -r /code/requirements.txt --no-cache-dir
 WORKDIR /code
-CMD ["/bin/bash", "-c", "source env/bin/activate && pip3 install --upgrade pip && pip3 install -r /code/requirements.txt --no-cache-dir && "dramatiq alws.dramatiq.build"]
+CMD ["/bin/bash", "-c", "source env/bin/activate && pip3 install --upgrade pip && pip3 install -r requirements.txt --no-cache-dir && "dramatiq alws.dramatiq.build"]
