--- a/requirements.txt
+++ b/requirements.txt
@@ -26,5 +26,5 @@ pgpy==0.6.0
 markdown==3.4.3
 httpx-oauth==0.11.2
 sentry-sdk[fastapi]==1.28.1  # requires FastAPI>=0.79.0
-git+https://git.almalinux.org/almalinux/cas_wrapper.git@0.0.6#egg=cas_wrapper
+git+https://git.almalinux.org/danfimov/immudb_wrapper.git@init#egg=immudb_wrapper
 git+https://github.com/AlmaLinux/errata2osv.git@0.0.2#egg=errata2osv
