Fix typo, volumes should be colon separated

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,7 +100,7 @@ services:
       - "./tests:/code/tests"
       - "./scripts:/code/scripts"
       - "./reference_data:/code/reference_data"
-      - "./requirements.txt /code/requirements.txt"
+      - "./requirements.txt:/code/requirements.txt"
     command: bash -c 'source env/bin/activate &&
                       /wait_for_it.sh rabbitmq:5672 &&
                       pip3 install --upgrade pip && 
@@ -121,7 +121,7 @@ services:
       context: .
     volumes:
       - "./alws:/code/alws"
-      - "./requirements.txt /code/requirements.txt"
+      - "./requirements.txt:/code/requirements.txt"
     command: bash -c 'source env/bin/activate &&
                       /wait_for_it.sh rabbitmq:5672 &&
                       pip3 install --upgrade pip && 
@@ -142,7 +142,7 @@ services:
       context: .
     volumes:
       - "./alws:/code/alws"
-      - "./requirements.txt /code/requirements.txt"
+      - "./requirements.txt:/code/requirements.txt"
     command: bash -c 'source env/bin/activate &&
                       /wait_for_it.sh rabbitmq:5672 &&
                       pip3 install --upgrade pip && 
@@ -163,7 +163,7 @@ services:
       context: .
     volumes:
       - "./alws:/code/alws"
-      - "./requirements.txt /code/requirements.txt"
+      - "./requirements.txt:/code/requirements.txt"
     command: bash -c 'source env/bin/activate &&
                       /wait_for_it.sh rabbitmq:5672 &&
                       pip3 install --upgrade pip && 
@@ -184,7 +184,7 @@ services:
       context: .
     volumes:
       - "./alws:/code/alws"
-      - "./requirements.txt /code/requirements.txt"
+      - "./requirements.txt:/code/requirements.txt"
     command: bash -c 'source env/bin/activate &&
                       pip3 install --upgrade pip && 
                       pip3 install -r requirements.txt --no-cache-dir &&
@@ -200,7 +200,7 @@ services:
       context: .
     volumes:
       - "./alws:/code/alws"
-      - "./requirements.txt /code/requirements.txt"
+      - "./requirements.txt:/code/requirements.txt"
     command: bash -c 'source env/bin/activate &&
                       pip3 install --upgrade pip && 
                       pip3 install -r requirements.txt --no-cache-dir &&
@@ -216,7 +216,7 @@ services:
       context: .
     volumes:
       - "./alws:/code/alws"
-      - "./requirements.txt /code/requirements.txt"
+      - "./requirements.txt:/code/requirements.txt"
     command: bash -c 'source env/bin/activate &&
                       /wait_for_it.sh rabbitmq:5672 &&
                       pip3 install --upgrade pip && 
