Mount sources instead copy them into a Docker image:
- Mount requirements.txt
- Mount sources
- Update pip & reinstall all requirements on launch if a developer changed them before

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,8 @@ services:
     environment:
       CELERY_CONFIG_PATH: "/celery_config.yaml"
       EXTERNAL_NETWORK: "albs-web-server_default"
-    command: "bash -c 'source env/bin/activate && celery
+    command: "bash -c 'source env/bin/activate && pip3 install --upgrade pip &&
+        pip3 install -r celery.txt --no-cache-dir && celery
         -A alts.worker.app worker --pool=threads --concurrency=20
         --loglevel=INFO -Q docker-x86_64-0 -O fair --without-gossip
         --without-mingle --without-heartbeat'"
@@ -41,6 +42,10 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ../alts/configs/alts_config.yaml:/celery_config.yaml
+      - ../alts/alts:/code/alts
+      - ../alts/resources:/code/resources
+      - ../alts/tests:/code/tests
+      - ../alts/requirements/celery.txt:/code/celery.txt
     depends_on:
       - rabbitmq
 
@@ -54,11 +59,16 @@ services:
     environment:
       CELERY_CONFIG_PATH: "/scheduler_config.yaml"
       SCHEDULER_CONFIG_PATH: "/scheduler_config.yaml"
-    command: "bash -c 'source env/bin/activate && uvicorn --host 0.0.0.0
+    command: "bash -c 'source env/bin/activate && pip3 install --upgrade pip &&
+        pip3 install -r scheduler.txt --no-cache-dir && uvicorn --host 0.0.0.0
         alts.scheduler.app:app --limit-concurrency 100 --backlog 1000'"
     restart: on-failure
     volumes:
       - ../alts/configs/alts_config.yaml:/scheduler_config.yaml
+      - ../alts/alts:/code/alts
+      - ../alts/resources:/code/resources
+      - ../alts/tests:/code/tests
+      - ../alts/requirements/scheduler.txt:/code/scheduler.txt
     depends_on:
       - rabbitmq
 
