--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,12 +87,12 @@ services:
       - "../volumes/pulp/exports:/srv/exports"
       - "./reference_data:/code/reference_data"
     command:
-        bash -c 'source env/bin/activate &&
-                 /wait_for_it.sh db:5432 &&
-                 PYTHONPATH="." alembic --config alws/alembic.ini upgrade head &&
-                 pip3 install --upgrade pip &&
-                 pip3 install -r requirements.txt &&
-                 uvicorn --host 0.0.0.0 alws.app:app'
+      bash -c 'source env/bin/activate &&
+               /wait_for_it.sh db:5432 &&
+               PYTHONPATH="." alembic --config alws/alembic.ini upgrade head &&
+               pip3 install --upgrade pip &&
+               pip3 install -r requirements.txt &&
+               uvicorn --host 0.0.0.0 alws.app:app'
     restart: on-failure
     depends_on:
       - db
@@ -113,7 +113,7 @@ services:
       - "./requirements.txt:/code/requirements.txt"
     command: bash -c 'source env/bin/activate &&
                       /wait_for_it.sh rabbitmq:5672 &&
-                      pip3 install --upgrade pip && 
+                      pip3 install --upgrade pip &&
                       pip3 install -r requirements.txt --no-cache-dir &&
                       dramatiq alws.dramatiq --threads 1 -Q default'
     restart: on-failure
@@ -134,7 +134,7 @@ services:
       - "./requirements.txt:/code/requirements.txt"
     command: bash -c 'source env/bin/activate &&
                       /wait_for_it.sh rabbitmq:5672 &&
-                      pip3 install --upgrade pip && 
+                      pip3 install --upgrade pip &&
                       pip3 install -r requirements.txt --no-cache-dir &&
                       dramatiq alws.dramatiq --threads 1 -Q builds'
     restart: on-failure
@@ -155,7 +155,7 @@ services:
       - "./requirements.txt:/code/requirements.txt"
     command: bash -c 'source env/bin/activate &&
                       /wait_for_it.sh rabbitmq:5672 &&
-                      pip3 install --upgrade pip && 
+                      pip3 install --upgrade pip &&
                       pip3 install -r requirements.txt --no-cache-dir &&
                       dramatiq alws.dramatiq --processes 1 --threads 1 -Q errata'
     restart: on-failure
@@ -176,7 +176,7 @@ services:
       - "./requirements.txt:/code/requirements.txt"
     command: bash -c 'source env/bin/activate &&
                       /wait_for_it.sh rabbitmq:5672 &&
-                      pip3 install --upgrade pip && 
+                      pip3 install --upgrade pip &&
                       pip3 install -r requirements.txt --no-cache-dir &&
                       dramatiq alws.dramatiq --processes 1 --threads 1 -Q releases'
     restart: on-failure
@@ -196,7 +196,7 @@ services:
       - "./alws:/code/alws"
       - "./requirements.txt:/code/requirements.txt"
     command: bash -c 'source env/bin/activate &&
-                      pip3 install --upgrade pip && 
+                      pip3 install --upgrade pip &&
                       pip3 install -r requirements.txt --no-cache-dir &&
                       dramatiq alws.dramatiq --processes 1 --threads 1 -Q sign'
     restart: on-failure
@@ -212,7 +212,7 @@ services:
       - "./alws:/code/alws"
       - "./requirements.txt:/code/requirements.txt"
     command: bash -c 'source env/bin/activate &&
-                      pip3 install --upgrade pip && 
+                      pip3 install --upgrade pip &&
                       pip3 install -r requirements.txt --no-cache-dir &&
                       dramatiq alws.dramatiq --processes 3 --threads 1 -Q product_modify'
     restart: on-failure
@@ -229,7 +229,7 @@ services:
       - "./requirements.txt:/code/requirements.txt"
     command: bash -c 'source env/bin/activate &&
                       /wait_for_it.sh rabbitmq:5672 &&
-                      pip3 install --upgrade pip && 
+                      pip3 install --upgrade pip &&
                       pip3 install -r requirements.txt --no-cache-dir &&
                       dramatiq alws.dramatiq --processes 1 --threads 1 -Q tests'
     restart: on-failure
@@ -256,13 +256,17 @@ services:
     env_file:
       - vars.env
     volumes:
-      # TODO: Hack for developement, put placeholder here instead
+      # TODO: Hack for development, put placeholder here instead
       - "../albs-node/node-config:/home/alt/.config"
       - "../albs-node/requirements.txt:/build-node/requirements.txt"
       - "../albs-node/build_node:/build-node/build_node"
       - "../albs-node/almalinux_build_node.py:/build-node/almalinux_build_node.py"
     restart: on-failure
-    command: "bash -c '/wait_for_it.sh web_server:8000 && source env/bin/activate && pip3 install --upgrade pip && pip3 install -r requirements.txt --no-cache-dir && python3 almalinux_build_node.py -v -t 2'"
+    command: "bash -c '/wait_for_it.sh web_server:8000 &&
+                       source env/bin/activate &&
+                       pip3 install --upgrade pip &&
+                       pip3 install -r requirements.txt --no-cache-dir &&
+                       python3 almalinux_build_node.py -v -t 2'"
     depends_on:
       - web_server
 
@@ -271,14 +275,18 @@ services:
     env_file:
       - vars.env
     volumes:
-      # TODO: Hack for developement, put placeholder here instead
+      # TODO: Hack for development, put placeholder here instead
       - "../albs-sign-node/node-config:/home/alt/.config"
       - "~/.gnupg:/home/alt/.gnupg"
       - "../albs-sign-node/almalinux_sign_node.py:/sign-node/almalinux_sign_node.py"
       - "../albs-sign-node:/sign-node/sign_node"
       - "../albs-sign-node/requirements.txt:/sign-node/requirements.txt"
     restart: on-failure
-    command: "bash -c '/wait_for_it.sh web_server:8000 && source env/bin/activate && pip3 install --upgrade pip && pip3 install -r requirements.txt --no-cache-dir && python3 almalinux_sign_node.py -v'"
+    command: "bash -c '/wait_for_it.sh web_server:8000 &&
+                       source env/bin/activate &&
+                       pip3 install --upgrade pip &&
+                       pip3 install -r requirements.txt --no-cache-dir &&
+                       python3 almalinux_sign_node.py -v'"
 
   gitea_listener:
     image: quay.io/almalinuxorg/gitea-listener:latest
@@ -304,6 +312,25 @@ services:
       - "./alws:/code/alws"
       - "./alws/scripts/git_cacher/git_cacher.py:/code/git_cacher.py"
       - "./requirements.txt:/code/requirements.txt"
+
+  tests_cacher:
+    image: albs-tests-cacher:latest
+    env_file:
+      - vars.env
+    build:
+      context: .
+      dockerfile: Dockerfile.tests-cacher
+    restart: on-failure
+    depends_on:
+      - web_server
+    volumes:
+      - "./alws/scripts/tests_cacher/tests_cacher.py:/code/tests_cacher.py"
+      - "./alws/scripts/tests_cacher/requirements.txt:/code/requirements.txt"
+    command: "bash -c '/wait_for_it.sh web_server:8000 &&
+              source env/bin/activate &&
+              pip3 install --upgrade pip &&
+              pip3 install -r /code/requirements.txt --no-cache-dir &&
+              python tests_cacher.py'"
 
   pulp:
     # image: pulp/pulp
