Fix adding SRPM to module when build task is excluded

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -41,7 +41,7 @@ jobs:
             web_server
       - name: Run unit tests (pytest)
         run: docker-compose run -v /tmp:/tmp --no-deps web_server bash -o pipefail -c 'source
-          env/bin/activate && pytest -v --ignore alws/ --cov-report term-missing:skip-covered
+          env/bin/activate && pytest -vv --ignore alws/ --cov-report term-missing:skip-covered
           --cov-report xml:/tmp/coverage.xml --junitxml=/tmp/pytest.xml --cov=alws
           tests/ | tee /tmp/pytest-coverage.txt'
       - name: Pytest coverage comment
