--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,10 +25,7 @@ services:
     restart: always
 
   alts-celery:
-    image: alts-celery:latest
-    build:
-      dockerfile: Dockerfile.celery
-      context: ../alts
+    image: quay.io/almalinuxorg/alts-celery:latest
     environment:
       CELERY_CONFIG_PATH: "/celery_config.yaml"
       EXTERNAL_NETWORK: "albs-web-server_default"
@@ -50,10 +47,7 @@ services:
       - rabbitmq
 
   alts-scheduler:
-    image: alts-scheduler:latest
-    build:
-      dockerfile: Dockerfile.scheduler
-      context: ../alts
+    image: quay.io/almalinuxorg/alts-scheduler:latest
     ports:
       - "8082:8000"
     environment:
@@ -279,7 +273,7 @@ services:
       - "../albs-sign-node/node-config:/home/alt/.config"
       - "~/.gnupg:/home/alt/.gnupg"
       - "../albs-sign-node/almalinux_sign_node.py:/sign-node/almalinux_sign_node.py"
-      - "../albs-sign-node:/sign-node/sign_node"
+      - "../albs-sign-node/sign_node:/sign-node/sign_node"
       - "../albs-sign-node/requirements.txt:/sign-node/requirements.txt"
     restart: on-failure
     command: "bash -c '/wait_for_it.sh web_server:8000 &&
@@ -335,9 +329,9 @@ services:
               python tests_cacher.py'"
 
   pulp:
-    # image: pulp/pulp
+    image: pulp/pulp
     # after downgrading pulp you probably should to remove pulp volumes
-    image: pulp/pulp:upgrade
+#    image: pulp/pulp:upgrade
     ports:
       - 8081:80
       - 5431:5432
