--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -1,6 +1,6 @@
 name: syntax
 on:
-  pull_request_target:
+  pull_request:
     branches:
       - "**"
 jobs:
@@ -24,13 +24,13 @@ jobs:
           source env/bin/activate
           pip install -U pip
           pip install -r requirements.txt
-          pip install isort[colors] black pylint[spelling]
+          pip install isort[colors] black pylint
       - name: Run pylint
         id: pylint
         run: |
           delimiter='$(openssl rand -hex 8)'
           echo 'report<<$(delimiter)' >> $GITHUB_OUTPUT
-          env/bin/pylint ${{ steps.changed-files.outputs.all_changed_files }} --py-version 3.9 --max-line-length 80 --spelling-dict en_US --fail-under=8 >> $GITHUB_OUTPUT
+          env/bin/pylint ${{ steps.changed-files.outputs.all_changed_files }} --py-version 3.9 --exit-zero >> $GITHUB_OUTPUT
           echo '$(delimiter)' >> $GITHUB_OUTPUT
       - name: Post pylint output
         uses: mshick/add-pr-comment@v2
@@ -45,6 +45,6 @@ jobs:
             </details>
           message-id: pylint-report
       - name: Run black
-        run: env/bin/black ${{ steps.changed-files.outputs.all_changed_files }} --exclude alembic --check -l 79 --skip-string-normalization --diff --color
+        run: env/bin/black ${{ steps.changed-files.outputs.all_changed_files }} --exclude alembic --check --diff --color --target-version py39
       - name: Run isort
-        run: env/bin/isort ${{ steps.changed-files.outputs.all_changed_files }} --diff --color --profile black --check-only --py 39
+        run: env/bin/isort ${{ steps.changed-files.outputs.all_changed_files }} --diff --color --check-only --py 39
