--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ jinja2==3.1.2
 pgpy==0.6.0
 markdown==3.4.3
 httpx-oauth==0.11.2
+feedgen==0.9.0
 sentry-sdk[fastapi]==1.28.1  # requires FastAPI>=0.79.0
 git+https://github.com/AlmaLinux/immudb-wrapper.git@0.1.1#egg=immudb_wrapper
 git+https://github.com/AlmaLinux/errata2osv.git@0.0.3#egg=errata2osv
